<resources>
    <string name="allow">Allow the user access</string>
    <string name="analog1">Player 1 map axis</string>
    <string name="analog2">Player 2 map axis</string>
    <string name="analog3">Player 3 map axis</string>
    <string name="analog4">Player 4 map axis</string>
    <string name="analogdesc">Map hardware axis to controller</string>
    <string name="analoghat">Hat</string>
    <string name="analoghatdesc">Choose Hat</string>
    <string name="analogl2">L2 Trigger</string>
    <string name="analogl2desc">Choose L2 Stick</string>
    <string name="analogleftdz">Left Stick Deadzone</string>
    <string name="analogleftdzdesc">Choose deadzone percentage</string>
    <string name="analogleftx">Left Stick X</string>
    <string name="analogleftxdesc">Choose Left Stick X</string>
    <string name="analoglefty">Left Stick Y</string>
    <string name="analogleftydesc">Choose Left Stick Y</string>
    <string name="analogmapaxis">Map analog axis</string>
    <string name="analogpadid">Select Gamepad</string>
    <string name="analogpadiddesc">Select Gamepad ID</string>
    <string name="analogprofile">Bluez Profile</string>
    <string name="analogprofiledesc">Choose bluez gamepad profile</string>
    <string name="analogr2">R2 Trigger</string>
    <string name="analogr2desc">Choose R2 Stick</string>
    <string name="analogrange">Analog Range</string>
    <string name="analograngedesc">Choose analog range</string>
    <string name="analogrightdz">Right Stick Deadzone</string>
    <string name="analogrightdzdesc">Choose deadzone percentage</string>
    <string name="analogrightx">Right Stick X</string>
    <string name="analogrightxdesc">Choose Right Stick X</string>
    <string name="analogrighty">Right Stick Y</string>
    <string name="analogrightydesc">Choose Right Stick Y</string>
    <string name="app_name" translatable="false">Herc\'s Adventures</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="bios_dialog_info">Back</string>
    <string name="bios_dialog_message">Playstation 1 bios not found. \nThe Ps1 bios is a file called scph1001.bin you need to run ePSXe with a non-simulated bios. \n\nPress Simulated Bios to use the ePSXe simulated bios.\n\nSupport on epsxeandroid@gmail.com</string>
    <string name="bios_dialog_skip">Simulated Bios</string>
    <string name="bios_dialog_title">Information about Ps1 Bios</string>
    <string name="bios_finding">Searching Bios in the Sdcard</string>
    <string name="bios_found_dialog_message">found and configured on preferences.\nePSXe is fully configured to start to play!</string>
    <string name="bios_found_dialog_title">Bios Configured</string>
    <string name="bioshle">Simulated Bios</string>
    <string name="bioshledesc">Enable Simulated Bios</string>
    <string name="biosname">Bios file</string>
    <string name="biospreferences">Bios Preferences</string>
    <string name="buy_button">Buy app</string>
    <string name="cheat_dialog_apply">Apply</string>
    <string name="cheat_dialog_back">Back</string>
    <string name="cheat_dialog_disableall">Disable All</string>
    <string name="cheat_dialog_download">Download</string>
    <string name="cheat_dialog_downloaded">Cheat file Downloaded! Cheat codes availables now!</string>
    <string name="cheat_dialog_downloading">Downloading cheat file!...</string>
    <string name="cheat_dialog_enableall">Enable All</string>
    <string name="cheat_dialog_message1">ePSXe did not found GameShark cheat codes for this game in your sdcard. You can choose download option to try to download cheatcodes from the server (you need internet) or you can load cheat codes in the emulator creating a file called sdcard/epsxe/cheats/</string>
    <string name="cheat_dialog_message2">.txt in your sdcard. For example in Final Fantay 8 US-NTSC the file name is: epsxe/cheats/SLUS_008.92.txt.\n\nePSXe supports 256 codes per file. The file format is:\n#description of cheat code 1\nXXXXXXXX YYYY\nZZZZZZZZ AAAA\n#descripion of cheat code 2\nNNNNNNNN MMMM\n\nFor example for Final Fantasy 8 US-NTSC, it could be:\n#Zell level 20\n800778a4 4a38\n\nCurrently, only 80XXXXXX, 30XXXXXX, 50XXXXXX, 1F800XXX, D0XXXXXX, D1XXXXXX, D2XXXXXX, D3XXXXXX, E0XXXXXX, E1XXXXXX, E2XXXXXX, E3XXXXXX gameshark codes are supported.\nYou can find GameShark codes in a lot of webpages in internet, like: http://psxdatacenter.com , http://www.gamegenie.com/cheats/gameshark/ps1/index.html .\nAfter that, re-load your game, and you will be able to enable/disable the gameshark codes from the menu cheat codes on gameplay.</string>
    <string name="cheat_dialog_notdownloaded">Sorry, cheatcodes file for this game not available yet on server!</string>
    <string name="cheat_dialog_notdownloadednow">Sorry, unable to connect with server, try later!</string>
    <string name="cheat_dialog_title">Choose cheat codes for game</string>
    <string name="cheatedit_msg">Add/Edit cheats</string>
    <string name="cheatedit_title">Add/Edit cheats</string>
    <string name="cheatsave_msg">Do you want to write the cheat file?</string>
    <string name="cheatsave_title">Save cheat file</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="circle">Circle</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="controller1">Player 1</string>
    <string name="controller1desc">Configure Player 1</string>
    <string name="controller1map">Player 1 map buttons</string>
    <string name="controller1mapdesc">Map hardware buttons to controller 1 input</string>
    <string name="controller2">Player 2</string>
    <string name="controller2desc">Configure Player 2</string>
    <string name="controller2map">Player 2 map buttons</string>
    <string name="controller2mapdesc">Map hardware buttons to controller 2 input</string>
    <string name="controller3">Player 3</string>
    <string name="controller3desc">Configure Player 3</string>
    <string name="controller3map">Player 3 map buttons</string>
    <string name="controller3mapdesc">Map hardware buttons to controller 3 input</string>
    <string name="controller4">Player 4</string>
    <string name="controller4desc">Configure Player 4</string>
    <string name="controller4map">Player 4 map buttons</string>
    <string name="controller4mapdesc">Map hardware buttons to controller 4 input</string>
    <string name="cpucustomfps">Set Custom FPS</string>
    <string name="cpucustomfpsdesc">Set Custom FPS</string>
    <string name="cpufps">Show FPS</string>
    <string name="cpufpsdesc">Select to show FPS</string>
    <string name="cpuframeskip">CPU Frameskip</string>
    <string name="cpuframeskipdesc">Select the frameskip</string>
    <string name="cpumme">MME Enable</string>
    <string name="cpummedesc">Multimedia Extension</string>
    <string name="cpuoverclock">PSX CPU Overclock</string>
    <string name="cpuoverclockdesc">PSX CPU Overclock</string>
    <string name="cpupreferences">CPU Preferences</string>
    <string name="deadzone">Gamepad deadzone</string>
    <string name="debuginterpreter">CPU Interpreter</string>
    <string name="debuginterpreterdesc">CPU Interpreter</string>
    <string name="debugpreferences">Debug Preferences</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_email">Email</string>
    <string name="dialog_action_ok">OK</string>
    <string name="digitalbuttons">Joystick/Hardware Buttons</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="down">Down</string>
    <string name="downleft">Down + Left</string>
    <string name="dropbox_download">Download files</string>
    <string name="dropbox_upload">Upload files</string>
    <string name="fbutton_help">Help</string>
    <string name="fbutton_preferences">Preferences</string>
    <string name="fbutton_quit">Quit</string>
    <string name="fbutton_run_bios">Run Bios</string>
    <string name="fbutton_run_game">Run Game</string>
    <string name="file_browsefiles">Browse Files</string>
    <string name="file_gamedetails">Game Details</string>
    <string name="file_gamelist">Game List</string>
    <string name="file_help">Help</string>
    <string name="file_rescan">Re-scan</string>
</resources>