<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item
        xmlns:android="http://schemas.android.com/apk/res/android" 
        android:icon="@drawable/ic_menu_refresh"
        android:id="@+id/action_rescan"
        android:title="@string/file_rescan"/>
    <item xmlns:android="http://schemas.android.com/apk/res/android"
        android:icon="@drawable/ic_action_help"
        android:id="@+id/action_help"
        android:title="@string/file_help"/>
    <item
        android:icon="@drawable/ic_menu_gallery"
        android:id="@+id/action_gamedetails"
        android:title="@string/file_gamedetails"/>
    <item
        android:icon="@drawable/ic_menu_gallery"
        android:id="@+id/action_gamelist"
        android:title="@string/file_gamelist"/>
    <item
        android:icon="@drawable/ic_menu_archive"
        android:id="@+id/action_filebrowser"
        android:title="@string/file_browsefiles"/>
</menu>
