<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/contentLayout"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:id="@+id/ButtonsLayout"
            android:background="@drawable/background"
            android:padding="10px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">
            <Button
                android:textColor="#000000"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/button_run_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fbutton_run_game"/>
            <Button
                android:typeface="normal"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:id="@+id/button_run_bios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fbutton_run_bios"/>
            <Button
                android:typeface="normal"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:id="@+id/button_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fbutton_preferences"/>
            <Button
                android:typeface="normal"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:id="@+id/button_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fbutton_help"/>
            <Button
                android:typeface="normal"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:id="@+id/button_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fbutton_quit"/>
            <Button
                android:typeface="normal"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:id="@+id/button_change_disc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Смена диска"/>
        </LinearLayout>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/epsxeandroid"
            android:scaleType="fitXY"/>
    </LinearLayout>
</LinearLayout>
